@@ -1,3 +1,9 @@
+unreleased
+
+* Enhancements
+
+  * Tiny bit better #explain(needle)
+
 1.3.4 / 2012-04-26
 
 * Enhancements
